nav and main page html added

--- a/template/index.html
+++ b/template/index.html
@@ -10,6 +10,25 @@
     <title>thePortfolio</title>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <div class="nav">
+                <div class="l_side">
+                    <p class="nav_name">joshua r.o.</p>
+                </div>
+                <div class="r_side">
+                    <a href="#" class="nav_link">About</a>
+                    <a href="#" class="nav_link">Works</a>
+                    <a href="#" class="nav_link">Contact</a>
+                </div>
+            </div>
+        </header>
+        <div class="main_page">
+            
+
+        </div>
+    </div>
+</body>
     
     
     <script src="./static/js/script.js"></script>
