html main page added

--- a/template/index.html
+++ b/template/index.html
@@ -12,20 +12,57 @@
 <body>
     <div class="container">
         <header>
+            <!-- ---------- nav ---------- -->
             <div class="nav">
-                <div class="l_side">
-                    <p class="nav_name">joshua r.o.</p>
+                <div class="nav_name">
+                    <p>mr. Rosado</p>
                 </div>
-                <div class="r_side">
+                <div class="links">
+                    <a href="#" class="nav_link">Home</a>
                     <a href="#" class="nav_link">About</a>
-                    <a href="#" class="nav_link">Works</a>
+                    <a href="#" class="nav_link">Work</a>
                     <a href="#" class="nav_link">Contact</a>
                 </div>
             </div>
+            <!-- ---------- </nav> ---------- -->
         </header>
         <div class="main_page">
-            
-
+            <div>
+                <img src="#" alt="main_page_img">
+                <div class="main_page_content">
+                    <h1>joshua rosado </h1>
+                    <p>software engineer</p>
+                </div>
+            </div>
+        </div>
+        <div class="learn_more_page">
+            <h2>challenging myself to help achieve your goal</h2>
+            <p>LEARN MORE</p>
+        </div>
+        <div class="work_page">
+            <div class="work_container">
+                <h2>my recent work</h2>
+                <a href="#"><img src="#" alt="#"></a>
+                <a href="#"><img src="#" alt="#"></a>
+                <a href="#"><img src="#" alt="#"></a>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="footer_content">
+                <h1>mr. Rosado</h1>
+                <div class="footer_links">
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Work</a>
+                    <a href="#">Contact</a>
+                </div>
+                <div class="contact_links">
+                    <a href="#">LinkedIn</a>
+                    <a href="#">Github</a>
+                    <a href="#">Email</a>
+                </div>
+            </div>
+            <p>©2022 MR. JOSHUA ROSADO</p>
         </div>
     </div>
 </body>
