about section content added

--- a/template/index.html
+++ b/template/index.html
@@ -31,9 +31,21 @@
                 <img src="#" alt="main_page_img">
                 <div class="main_page_content">
                     <h1>joshua rosado </h1>
-                    <p>software engineer</p>
+                    <p>I'm a software engineer based in Nashville. <br>
+                    Enjoy using Python and CSS</p>
+                    
                 </div>
             </div>
+        </div>
+        <div class="about_page">
+            <div class="about_img_container">
+                <img src="#" alt="#" class="about_img">
+            </div>
+            <div class="about_content">
+                <h1>hi, i'm joshua!</h1>
+                <p> I am a creative software engineer that enjoys building websites and applications to help solve issues for different types of communities. I am a graduate from Coding Dojo Colorado Technical University with a Full Stack Software Development Certificate were I acquired a multiple set of skills as a developer.</p>
+            </div>
+
         </div>
         <div class="learn_more_page">
             <h2>challenging myself to help achieve your goal</h2>
