--- a/template/index.html
+++ b/template/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/mobile_style.css">
-    <link rel="stylesheet" href="./static/css/landscape_style.css">
-    <link rel="stylesheet" href="./static/css/max_style.css">
+    <link rel="stylesheet" href="../static/css/mobile_style.css">
+    <link rel="stylesheet" href="../static/css/landscape_style.css">
+    <link rel="stylesheet" href="../static/css/max_style.css">
     
     <title>thePortfolio</title>
 </head>
@@ -17,6 +17,10 @@
                 <div class="nav_name">
                     <p>mr. Rosado</p>
                 </div>
+                <input type="checkbox" id="nav_toggle">
+                <label for="nav_toggle" class="nav_toggle_label">
+                    <span></span>
+                </label>
                 <div class="links">
                     <a href="#" class="nav_link">Home</a>
                     <a href="#" class="nav_link">About</a>
@@ -80,6 +84,6 @@
 </body>
     
     
-    <script src="./static/js/script.js"></script>
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
