--- a/static/css/mobile_style.css
+++ b/static/css/mobile_style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif;
 }
 :root {
     --bg-light-color:rgb(251, 250, 249);
@@ -27,20 +28,35 @@
 }
 
 .links{
-    /* display: none; */
+    display: flex;
+    opacity: 0;
     height: 100dvh;
-    width: 100dvh;
+    width: 100dvw;
+    background-color: var(--bg-light-color);
     position: absolute;
     right: 0px;
     top: 0px;
     flex-direction: column;
-    display: flex;
-    justify-content: center;
+    padding: 20dvh 0 ;
+    justify-content: space-evenly;
     align-items: center;
-    border: 2px solid blue;
+    transition: 2s ease-in-out .5s;
 }
 .nav_link{
     display: flex;
+    font-size: 4dvh;
+    text-decoration: none;
+}
+
+/* -- input checked = open nav (toggle) */
+
+#nav_toggle:checked ~ .links{
+    opacity: 1;
+    transition: 500ms ease-in-out .5s ;
+}
+
+#nav_toggle{
+    z-index: 2;
 }
 
 /* ---------------- end of - NAV SECTION */
