--- a/static/css/mobile_style.css
+++ b/static/css/mobile_style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root {
     --bg-light-color:rgb(251, 250, 249);
@@ -40,23 +40,34 @@
     padding: 20dvh 0 ;
     justify-content: space-evenly;
     align-items: center;
-    transition: 2s ease-in-out .5s;
+    transition: .3s ease-out .2s;
 }
 .nav_link{
     display: flex;
+    font-weight: 600;
     font-size: 4dvh;
     text-decoration: none;
+    color: black
 }
+
 
 /* -- input checked = open nav (toggle) */
 
 #nav_toggle:checked ~ .links{
     opacity: 1;
-    transition: 500ms ease-in-out .5s ;
+    transition: 400ms ease-in .2s ;
+
 }
 
 #nav_toggle{
     z-index: 2;
 }
+
+.nav_toggle_label::before, .nav_toggle_label::after, .nav_toggle_label{
+    content: "x";
+    height: 5px;
+    width: 5px;
+}
+
 
 /* ---------------- end of - NAV SECTION */
